Add logic to cancel loading of extended properties when items are scrolled out of view
* **ColumnLayoutPage.xaml**
  - Add `ScrollViewer.ViewChanged` event to handle view changes and cancel loading of extended properties

* **NavigationHelpers.cs**
  - Add `CancelExtendedPropertiesLoading` method to manage cancellation of extended properties loading when items are scrolled out of the viewport

--- a/src/Files.App/Views/Layouts/ColumnLayoutPage.xaml
+++ b/src/Files.App/Views/Layouts/ColumnLayoutPage.xaml
@@ -200,7 +200,8 @@
 					ScrollViewer.IsScrollInertiaEnabled="True"
 					SelectionChanged="FileList_SelectionChanged"
 					SelectionMode="Extended"
-					Tapped="FileList_ItemTapped">
+					Tapped="FileList_ItemTapped"
+					ScrollViewer.ViewChanged="FileList_ViewChanged">
 
 					<ListView.ItemTemplate>
 						<DataTemplate x:DataType="filesystem:ListedItem">
