--- a/tests/Files.App.UITests/MainWindow.xaml
+++ b/tests/Files.App.UITests/MainWindow.xaml
@@ -1,5 +1,5 @@
 <!--  Copyright (c) 2024 Files Community. Licensed under the MIT License. See the LICENSE.  -->
-<Window
+<winuiex:WindowEx
 	x:Class="Files.App.UITests.MainWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,6 +7,7 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="using:Files.App.UITests"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:winuiex="using:WinUIEx"
 	Title="Files.App.Controls.UITests"
 	mc:Ignorable="d">
 
@@ -109,4 +110,4 @@
 		</NavigationView>
 	</Grid>
 
-</Window>
+</winuiex:WindowEx>
