--- a/src/Files.App/UserControls/TabBar/TabBar.xaml
+++ b/src/Files.App/UserControls/TabBar/TabBar.xaml
@@ -261,7 +261,9 @@
 						HorizontalAlignment="Stretch"
 						VerticalAlignment="Stretch"
 						Fill="Transparent"
-						Loaded="DragAreaRectangle_Loaded" />
+						IsHitTestVisible="True"
+						Loaded="DragAreaRectangle_Loaded"
+						PointerPressed="DragAreaRectangle_PointerPressed" />
 
 				</Grid>
 			</TabView.TabStripFooter>
